Update CIS notebooks: Replace title with tip channels for tooltips, fix imports order, and fix syntax errors

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -438,26 +438,65 @@ s2Legend = {
         legend: false
       },
       marks: [
-        Plot.geo(s2GeoData, {
+        Plot.geo(s2GeoData.features, {
           fill: d => bivariateColors[d.properties.bivariateClass],
           stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5,
-          title: d => {
-            const adminName = s2CurrentAdminLevel === 0 
-              ? d.properties.admin0_name 
-              : s2CurrentAdminLevel === 1
-              ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
-              : `${d.properties.admin2_name}, ${d.properties.admin1_name}`;
-            
-            const isPriority = d.properties.bivariateClass === "High × High";
-            const priorityLabel = isPriority ? "\n🎯 PRIORITY ZONE" : "";
-            
-            return `${adminName}\n` +
-                   `CIS Readiness: ${d.properties.cis_readiness_index?.toFixed(2)} (${d.properties.readinessClass})\n` +
-                   `${hazardName}: ${d.properties.hazardValue?.toFixed(1)} (${d.properties.hazardClass})\n` +
-                   `Category: ${d.properties.bivariateClass}${priorityLabel}`;
-          }
-        })
+          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
+        }),
+        Plot.tip(
+          s2GeoData.features,
+          Plot.pointer(
+            Plot.centroid({
+              channels: {
+                region: {
+                  label: "Region",
+                  value: (d) => {
+                    if (s2CurrentAdminLevel === 0) {
+                      return d.properties.admin0_name;
+                    } else if (s2CurrentAdminLevel === 1) {
+                      return `${d.properties.admin1_name}, ${d.properties.admin0_name}`;
+                    } else {
+                      return `${d.properties.admin2_name}, ${d.properties.admin1_name}`;
+                    }
+                  }
+                },
+                cisReadiness: {
+                  label: "CIS Readiness",
+                  value: (d) => d.properties.cis_readiness_index
+                },
+                readinessClass: {
+                  label: "Readiness Class",
+                  value: (d) => d.properties.readinessClass
+                },
+                hazardValue: {
+                  label: hazardName,
+                  value: (d) => d.properties.hazardValue
+                },
+                hazardClass: {
+                  label: "Hazard Class",
+                  value: (d) => d.properties.hazardClass
+                },
+                category: {
+                  label: "Category",
+                  value: (d) => d.properties.bivariateClass
+                },
+                priority: {
+                  label: "Priority",
+                  value: (d) => d.properties.bivariateClass === "High × High" ? "🎯 PRIORITY ZONE" : ""
+                }
+              },
+              format: {
+                region: true,
+                cisReadiness: (d) => d != null ? d.toFixed(2) : "N/A",
+                readinessClass: true,
+                hazardValue: (d) => d != null ? d.toFixed(1) : "N/A",
+                hazardClass: true,
+                category: true,
+                priority: true
+              }
+            })
+          )
+        )
       ]
     });
     
