--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -231,19 +231,19 @@ filteredData = {
   // Admin0 selected, no admin1 - show all admin1 data for selected countries
   if (selectedAdmin1.length === 0) {
     return cisData.filter(d => 
-      selectedAdmin0.includes(d.admin0_name) && 
+      selectedAdmin0.includes(d.admin0_name) &&
       d.admin1_name != null && 
       d.admin2_name == null
     );
   }
   
   // Admin1 selected - show all admin2 data for selected admin1 regions
-  return cisData.filter(d => 
-    selectedAdmin0.includes(d.admin0_name) &&
+    return cisData.filter(d => 
+      selectedAdmin0.includes(d.admin0_name) &&
     selectedAdmin1.includes(d.admin1_name) &&
     d.admin2_name != null
-  );
-}
+    );
+  }
 
 // For admin2 highlighting: track which admin2 regions are selected
 highlightedAdmin2 = selectedAdmin2.length > 0 ? selectedAdmin2 : []
@@ -258,7 +258,7 @@ breadcrumb = {
   if (selectedAdmin0.length === 0) {
     parts.push('Sub-Saharan Africa');
   } else {
-    if (selectedAdmin0.length === 1) parts.push(selectedAdmin0[0]);
+  if (selectedAdmin0.length === 1) parts.push(selectedAdmin0[0]);
     else parts.push(`${selectedAdmin0.length} countries`);
   }
   
@@ -507,12 +507,37 @@ s11MapData = {
             label: "Classification"
           },
           marks: [
-            Plot.geo(s11MapData, {
+            Plot.geo(s11MapData.features, {
               fill: useRaw ? d => d.properties.weatherStation : d => d.properties.weatherStationClass,
               stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-              strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5,
-              title: d => `${d.properties.regionName}\nWeather Station: ${d.properties.weatherStation != null ? d.properties.weatherStation.toFixed(3) : 'N/A'}\nClass: ${d.properties.weatherStationClass}`
-            })
+              strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
+            }),
+            Plot.tip(
+              s11MapData.features,
+              Plot.pointer(
+                Plot.centroid({
+                  channels: {
+                    region: {
+                      label: "Region",
+                      value: (d) => d.properties.regionName
+                    },
+                    weatherStation: {
+                      label: "Weather Station",
+                      value: (d) => d.properties.weatherStation
+                    },
+                    class: {
+                      label: "Class",
+                      value: (d) => d.properties.weatherStationClass
+                    }
+                  },
+                  format: {
+                    region: true,
+                    weatherStation: (d) => d != null ? d.toFixed(3) : "N/A",
+                    class: true
+                  }
+                })
+              )
+            )
           ]
         })}
       </div>
@@ -536,12 +561,37 @@ s11MapData = {
             label: "Classification"
           },
           marks: [
-            Plot.geo(s11MapData, {
+            Plot.geo(s11MapData.features, {
               fill: useRaw ? d => d.properties.cloudCover : d => d.properties.cloudCoverClass,
               stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-              strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5,
-              title: d => `${d.properties.regionName}\nCloud Cover: ${d.properties.cloudCover != null ? d.properties.cloudCover.toFixed(3) : 'N/A'}\nClass: ${d.properties.cloudCoverClass}`
-            })
+              strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
+            }),
+            Plot.tip(
+              s11MapData.features,
+              Plot.pointer(
+                Plot.centroid({
+                  channels: {
+                    region: {
+                      label: "Region",
+                      value: (d) => d.properties.regionName
+                    },
+                    cloudCover: {
+                      label: "Cloud Cover",
+                      value: (d) => d.properties.cloudCover
+                    },
+                    class: {
+                      label: "Class",
+                      value: (d) => d.properties.cloudCoverClass
+                    }
+                  },
+                  format: {
+                    region: true,
+                    cloudCover: (d) => d != null ? d.toFixed(3) : "N/A",
+                    class: true
+                  }
+                })
+              )
+            )
           ]
         })}
       </div>
@@ -731,17 +781,41 @@ s12MapData = {
         label: "Classification"
       },
       marks: [
-        Plot.geo(s12MapData, {
+        Plot.geo(s12MapData.features, {
           fill: useRaw ? d => d.properties.precipAgreement : d => d.properties.precipAgreementClass,
           stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5,
-          title: d => {
-            const regionName = d.properties.admin2_name || d.properties.admin1_name || d.properties.admin0_name;
-            const country = d.properties.admin0_name;
-            const fullName = regionName === country ? regionName : `${regionName}, ${country}`;
-            return `${fullName}\nSatellite Agreement: ${d.properties.precipAgreement?.toFixed(1) || 'N/A'}\nClass: ${d.properties.precipAgreementClass}`;
-          }
-        })
+          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
+        }),
+        Plot.tip(
+          s12MapData.features,
+          Plot.pointer(
+            Plot.centroid({
+              channels: {
+                region: {
+                  label: "Region",
+                  value: (d) => {
+                    const regionName = d.properties.admin2_name || d.properties.admin1_name || d.properties.admin0_name;
+                    const country = d.properties.admin0_name;
+                    return regionName === country ? regionName : `${regionName}, ${country}`;
+                  }
+                },
+                satelliteAgreement: {
+                  label: "Satellite Agreement",
+                  value: (d) => d.properties.precipAgreement
+                },
+                class: {
+                  label: "Class",
+                  value: (d) => d.properties.precipAgreementClass
+                }
+              },
+              format: {
+                region: true,
+                satelliteAgreement: (d) => d != null ? d.toFixed(1) : "N/A",
+                class: true
+              }
+            })
+          )
+        )
       ]
     });
   } else {
@@ -959,6 +1033,8 @@ s13Data = {
     // Create y-axis domain maintaining the proper vertical order for each country
     const yDomain = stackedData.map(d => d.label);
     
+    const filteredStackedData = stackedData.filter(d => d.value != null);
+    
     return Plot.plot({
       marginLeft: marginLeft,
       marginTop: 40,
@@ -1013,13 +1089,38 @@ s13Data = {
         Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
         
         // All bars stacked vertically, maintaining order
-        Plot.barX(stackedData.filter(d => d.value != null), {
+        Plot.barX(filteredStackedData, {
           x1: 0,
           x2: "value",
           y: "label",
-          fill: "metric",
-          title: d => `${d.country}\n${d.metric}: ${d.value?.toFixed(2) || 'N/A'}`
-        })
+          fill: "metric"
+        }),
+        Plot.tip(
+          filteredStackedData,
+          Plot.pointer({
+            x: "value",
+            y: "label",
+            channels: {
+              country: {
+                label: "Country",
+                value: (d) => d.country
+              },
+              metric: {
+                label: "Metric",
+                value: (d) => d.metric
+              },
+              value: {
+                label: "Value",
+                value: (d) => d.value
+              }
+            },
+            format: {
+              country: true,
+              metric: true,
+              value: (d) => d != null ? d.toFixed(2) : "N/A"
+            }
+          })
+        )
       ]
     });
   } else {
@@ -1202,6 +1303,8 @@ s14MapData = {
     const aboveThreshold = s14MapData.features.filter(f => f.properties.cisReadiness >= s14Threshold);
     const belowThreshold = s14MapData.features.filter(f => f.properties.cisReadiness < s14Threshold);
     
+    const allFeatures = [...belowThreshold, ...aboveThreshold];
+    
     return Plot.plot({
       width: 2000,
       height: 1000,
@@ -1219,31 +1322,71 @@ s14MapData = {
           fill: d => d.properties.cisReadiness,
           fillOpacity: 0.5,
           stroke: d => d.properties.isHighlighted ? "#000" : "#999",
-          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5,
-          title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                      `CIS Readiness: ${d.properties.cisReadiness?.toFixed(3) || 'N/A'} (Below threshold)\n` +
-                      `Class: ${d.properties.cisReadinessClass}\n` +
-                      `Weather Station: ${d.properties.weatherStationClass}\n` +
-                      `Cloud Cover: ${d.properties.cloudCoverClass}\n` +
-                      `Precip Agreement: ${d.properties.precipAgreementClass}\n` +
-                      `Short-term: ${d.properties.shortTerm?.toFixed(3) || 'N/A'}\n` +
-                      `Long-term: ${d.properties.longTerm?.toFixed(3) || 'N/A'}`
+          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
         }),
         // Regions above threshold - fully opaque with bold border
         Plot.geo(aboveThreshold, {
           fill: d => d.properties.cisReadiness,
           fillOpacity: 1,
           stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 1.5,
-          title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                      `CIS Readiness: ${d.properties.cisReadiness?.toFixed(3) || 'N/A'} (Above threshold)\n` +
-                      `Class: ${d.properties.cisReadinessClass}\n` +
-                      `Weather Station: ${d.properties.weatherStationClass}\n` +
-                      `Cloud Cover: ${d.properties.cloudCoverClass}\n` +
-                      `Precip Agreement: ${d.properties.precipAgreementClass}\n` +
-                      `Short-term: ${d.properties.shortTerm?.toFixed(3) || 'N/A'}\n` +
-                      `Long-term: ${d.properties.longTerm?.toFixed(3) || 'N/A'}`
-        })
+          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 1.5
+        }),
+        Plot.tip(
+          allFeatures,
+          Plot.pointer(
+            Plot.centroid({
+              channels: {
+                region: {
+                  label: "Region",
+                  value: (d) => d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name
+                },
+                cisReadiness: {
+                  label: "CIS Readiness",
+                  value: (d) => d.properties.cisReadiness
+                },
+                threshold: {
+                  label: "Threshold Status",
+                  value: (d) => d.properties.cisReadiness >= s14Threshold ? "Above threshold" : "Below threshold"
+                },
+                class: {
+                  label: "Class",
+                  value: (d) => d.properties.cisReadinessClass
+                },
+                weatherStation: {
+                  label: "Weather Station",
+                  value: (d) => d.properties.weatherStationClass
+                },
+                cloudCover: {
+                  label: "Cloud Cover",
+                  value: (d) => d.properties.cloudCoverClass
+                },
+                precipAgreement: {
+                  label: "Precip Agreement",
+                  value: (d) => d.properties.precipAgreementClass
+                },
+                shortTerm: {
+                  label: "Short-term",
+                  value: (d) => d.properties.shortTerm
+                },
+                longTerm: {
+                  label: "Long-term",
+                  value: (d) => d.properties.longTerm
+                }
+              },
+              format: {
+                region: true,
+                cisReadiness: (d) => d != null ? d.toFixed(3) : "N/A",
+                threshold: true,
+                class: true,
+                weatherStation: true,
+                cloudCover: true,
+                precipAgreement: true,
+                shortTerm: (d) => d != null ? d.toFixed(3) : "N/A",
+                longTerm: (d) => d != null ? d.toFixed(3) : "N/A"
+              }
+            })
+          )
+        )
       ]
     });
   } else if (s14ViewType === "Table") {
@@ -1323,9 +1466,34 @@ s14MapData = {
         Plot.cell(heatData, {
           x: "indicator",
           y: "admin",
-          fill: "value",
-          title: d => `${d.admin}\n${d.indicator}: ${d.value?.toFixed(3) || 'N/A'}`
-        })
+          fill: "value"
+        }),
+        Plot.tip(
+          heatData,
+          Plot.pointer({
+            x: "indicator",
+            y: "admin",
+            channels: {
+              admin: {
+                label: "Admin",
+                value: (d) => d.admin
+              },
+              indicator: {
+                label: "Indicator",
+                value: (d) => d.indicator
+              },
+              value: {
+                label: "Value",
+                value: (d) => d.value
+              }
+            },
+            format: {
+              admin: true,
+              indicator: true,
+              value: (d) => d != null ? d.toFixed(3) : "N/A"
+            }
+          })
+        )
       ]
     });
   }
