--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -17,6 +17,12 @@ cis = await FileAttachment(
 ```
 
 ```{ojs}
+// Import all UI components FIRST before any cells that use them
+import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
+```
+
+```{ojs}
 //| echo: false
 
 // Hero section - nbTitle and hero_url are defined in source code section
@@ -239,12 +245,7 @@ actually appearing in the notebook.
 -->
 
 <!-- Import UI Components FIRST -->
-
-```{ojs}
-// Import all UI components at once to avoid duplication
-import { atlasTOC, atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
-import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
-```
+<!-- NOTE: Imports have been moved to the top of the file (after translations) to ensure they're available to all cells -->
 
 <!-- Text and Language Translations -->
 
