Clean up bivariate map legend: remove absolute positioning, remove target symbol, simplify styling, and position below map

--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -416,41 +416,49 @@ s3GeoData = {
 ```{ojs}
 //| echo: false
 
-// Bivariate legend (3x3 grid)
+// Bivariate legend (3x3 grid) - simplified and integrated styling
 s3Legend = {
-  const size = 40;
+  const size = 45;
   const gap = 2;
   const classes = ["Low", "Moderate", "High"];
+  const totalWidth = size * 3 + gap * 2;
+  const totalHeight = size * 3 + gap * 2 + 50;
   
   return html`
-    <div style="margin: 20px 0; padding: 20px; background: white; border-radius: 8px; display: inline-block;">
-      <div style="font-weight: bold; margin-bottom: 10px; font-size: 12px;">
-        ${_lang(cis.s3ReadinessLabel)} → (horizontal) | ${s3CurrentAccessLabel} → (vertical)
-      </div>
-      <svg width="${size * 3 + gap * 2 + 100}" height="${size * 3 + gap * 2 + 50}">
-        ${classes.flatMap((accessClass, i) => 
-          classes.map((readinessClass, j) => {
-            const bivClass = `${readinessClass} × ${accessClass}`;
-            return svg`
-              <rect 
-                x="${j * (size + gap)}" 
-                y="${(2 - i) * (size + gap)}"
-                width="${size}" 
-                height="${size}"
-                fill="${s3BivariateColors[bivClass]}"
-                stroke="#333"
-                stroke-width="1"
-              />
-            `;
-          })
-        )}
-        <text x="${size * 3 + gap * 2 + 5}" y="${size * 1.5}" font-size="12">High</text>
-        <text x="${size * 3 + gap * 2 + 5}" y="${size * 2.5 + gap}" font-size="12">Moderate</text>
-        <text x="${size * 3 + gap * 2 + 5}" y="${size * 3.5 + gap * 2}" font-size="12">Low</text>
-        
-        <text x="${size * 0.5}" y="${size * 3 + gap * 2 + 20}" font-size="12" text-anchor="middle">Low</text>
-        <text x="${size * 1.5 + gap}" y="${size * 3 + gap * 2 + 20}" font-size="12" text-anchor="middle">Moderate</text>
-        <text x="${size * 2.5 + gap * 2}" y="${size * 3 + gap * 2 + 20}" font-size="12" text-anchor="middle">High</text>
+    <div style="margin-top: 20px; padding: 12px; background: #f8f9fa; border-radius: 4px; display: inline-block; font-family: system-ui, -apple-system, sans-serif;">
+      <svg width="${totalWidth + 100}" height="${totalHeight}">
+        <g transform="translate(0, 15)">
+          ${classes.flatMap((accessClass, i) => 
+            classes.map((readinessClass, j) => {
+              const bivClass = `${readinessClass} × ${accessClass}`;
+              const isPriority = readinessClass === "High" && accessClass === "High";
+              return svg`
+                <rect 
+                  x="${j * (size + gap)}" 
+                  y="${(2 - i) * (size + gap)}"
+                  width="${size}" 
+                  height="${size}"
+                  fill="${s3BivariateColors[bivClass]}"
+                  stroke="${isPriority ? '#000' : '#999'}"
+                  stroke-width="${isPriority ? '2.5' : '0.5'}"
+                />
+              `;
+            })
+          )}
+          <!-- Y-axis labels (Access) - right side -->
+          <text x="${totalWidth + 8}" y="${size * 0.5 + 3}" font-size="10" fill="#333" font-weight="500">High</text>
+          <text x="${totalWidth + 8}" y="${size * 1.5 + gap + 3}" font-size="10" fill="#333" font-weight="500">Moderate</text>
+          <text x="${totalWidth + 8}" y="${size * 2.5 + gap * 2 + 3}" font-size="10" fill="#333" font-weight="500">Low</text>
+          
+          <!-- X-axis labels (CIS Readiness) - bottom -->
+          <text x="${size * 0.5}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Low</text>
+          <text x="${size * 1.5 + gap}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Moderate</text>
+          <text x="${size * 2.5 + gap * 2}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">High</text>
+          
+          <!-- Axis titles -->
+          <text x="${totalWidth / 2}" y="${size * 3 + gap * 2 + 28}" font-size="11" text-anchor="middle" fill="#333" font-weight="600">${_lang(cis.s3ReadinessLabel)} →</text>
+          <text x="${totalWidth + 50}" y="${size * 1.5 + gap}" font-size="11" fill="#333" font-weight="600" transform="rotate(90, ${totalWidth + 50}, ${size * 1.5 + gap})">${s3CurrentAccessLabel} ↑</text>
+        </g>
       </svg>
     </div>
   `;
@@ -528,7 +536,9 @@ s3Legend = {
           )
         ]
       })}
-      ${s3Legend}
+      <div style="display: flex; justify-content: center; margin-top: 15px;">
+        ${s3Legend}
+      </div>
     </div>`;
   } else if (s3ViewType === "dumbbell") {
     // Dumbbell Chart - inline to prevent auto-display
