--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -340,82 +340,52 @@ s2GeoData = {
 ```{ojs}
 //| echo: false
 
-// Bivariate legend
+// Bivariate legend - simplified and integrated styling
 s2Legend = {
-  const size = 80;
-  const padding = 15;
-  const totalWidth = size * 3 + padding * 2;
-  const totalHeight = size * 3 + padding * 2 + 60;
-  
-  const svg = d3.create("svg")
-    .attr("width", totalWidth)
-    .attr("height", totalHeight)
-    .style("position", "absolute")
-    .style("bottom", "20px")
-    .style("right", "20px")
-    .style("background", "white")
-    .style("border", "2px solid #333")
-    .style("border-radius", "8px")
-    .style("box-shadow", "0 4px 8px rgba(0,0,0,0.2)");
-  
-  const g = svg.append("g")
-    .attr("transform", `translate(${padding}, ${padding})`);
-  
-  // Draw 3x3 grid (inverted Y axis so High hazard is at top)
+  const size = 45;
+  const gap = 2;
   const classes = ["Low", "Moderate", "High"];
+  const totalWidth = size * 3 + gap * 2;
+  const totalHeight = size * 3 + gap * 2 + 50;
   
-  classes.forEach((readinessClass, i) => {
-    classes.forEach((hazardClass, j) => {
-      const key = `${readinessClass} × ${classes[2 - j]}`; // Invert j for Y axis
-      g.append("rect")
-        .attr("x", i * size)
-        .attr("y", j * size)
-        .attr("width", size)
-        .attr("height", size)
-        .attr("fill", bivariateColors[key])
-        .attr("stroke", "#333")
-        .attr("stroke-width", 1);
-      
-      // Add star to High × High cell
-      if (readinessClass === "High" && classes[2 - j] === "High") {
-        g.append("text")
-          .attr("x", i * size + size / 2)
-          .attr("y", j * size + size / 2)
-          .attr("text-anchor", "middle")
-          .attr("dominant-baseline", "middle")
-          .attr("font-size", "24px")
-          .text("🎯");
-      }
-    });
-  });
-  
-  // X-axis label (CIS Readiness)
-  svg.append("text")
-    .attr("x", totalWidth / 2)
-    .attr("y", totalHeight - 35)
-    .attr("text-anchor", "middle")
-    .attr("font-size", "12px")
-    .attr("font-weight", "bold")
-    .text("CIS Readiness →");
-  
-  svg.append("text")
-    .attr("x", totalWidth / 2)
-    .attr("y", totalHeight - 20)
-    .attr("text-anchor", "middle")
-    .attr("font-size", "10px")
-    .text("Low        Moderate        High");
-  
-  // Y-axis label (Hazard Severity)
-  svg.append("text")
-    .attr("x", -totalHeight / 2 + 30)
-    .attr("y", 12)
-    .attr("text-anchor", "middle")
-    .attr("font-size", "12px")
-    .attr("font-weight", "bold")
-    .attr("transform", `rotate(-90, 12, ${totalHeight / 2 - 30})`)
-    .text("Hazard Severity ↑");
-  
-  return svg.node();
+  return html`
+    <div style="margin-top: 20px; padding: 12px; background: #f8f9fa; border-radius: 4px; display: inline-block; font-family: system-ui, -apple-system, sans-serif;">
+      <svg width="${totalWidth + 100}" height="${totalHeight}">
+        <g transform="translate(0, 15)">
+          ${classes.flatMap((hazardClass, i) => 
+            classes.map((readinessClass, j) => {
+              const key = `${readinessClass} × ${classes[2 - i]}`; // Invert i for Y axis
+              const isPriority = readinessClass === "High" && classes[2 - i] === "High";
+              return svg`
+                <rect 
+                  x="${j * (size + gap)}" 
+                  y="${i * (size + gap)}"
+                  width="${size}" 
+                  height="${size}"
+                  fill="${bivariateColors[key]}"
+                  stroke="${isPriority ? '#000' : '#999'}"
+                  stroke-width="${isPriority ? '2.5' : '0.5'}"
+                />
+              `;
+            })
+          )}
+          <!-- Y-axis labels (Hazard Severity) - right side -->
+          <text x="${totalWidth + 8}" y="${size * 0.5 + 3}" font-size="10" fill="#333" font-weight="500">High</text>
+          <text x="${totalWidth + 8}" y="${size * 1.5 + gap + 3}" font-size="10" fill="#333" font-weight="500">Moderate</text>
+          <text x="${totalWidth + 8}" y="${size * 2.5 + gap * 2 + 3}" font-size="10" fill="#333" font-weight="500">Low</text>
+          
+          <!-- X-axis labels (CIS Readiness) - bottom -->
+          <text x="${size * 0.5}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Low</text>
+          <text x="${size * 1.5 + gap}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Moderate</text>
+          <text x="${size * 2.5 + gap * 2}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">High</text>
+          
+          <!-- Axis titles -->
+          <text x="${totalWidth / 2}" y="${size * 3 + gap * 2 + 28}" font-size="11" text-anchor="middle" fill="#333" font-weight="600">CIS Readiness →</text>
+          <text x="${totalWidth + 50}" y="${size * 1.5 + gap}" font-size="11" fill="#333" font-weight="600" transform="rotate(90, ${totalWidth + 50}, ${size * 1.5 + gap})">Hazard Severity ↑</text>
+        </g>
+      </svg>
+    </div>
+  `;
 }
 ```
 
@@ -501,9 +471,11 @@ s2Legend = {
     });
     
     yield html`
-      <div style="position: relative;">
+      <div>
         ${map}
-        ${s2Legend}
+        <div style="display: flex; justify-content: center; margin-top: 15px;">
+          ${s2Legend}
+        </div>
       </div>
     `;
   } else {
